<resources>
    <string name="app_name">车励享OA系统</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="visitor">来访</string>
    <string name="visitor_customer_name">客户姓名:</string>
    <string name="visitor_customer_original">客户来源:</string>
    <string name="visitor_point_notice">点位说明:</string>
    <string name="next">下一步</string>
    <string name="title_activity_quest_and_setting">QuestAndSetting</string>
    <string name="title_home">项目表</string>
    <string name="title_dashboard">设置</string>
    <string name="title_notifications">Notifications</string>
    <string name="project_list">任务列表</string>
    <string name="project_new">新建</string>
    <string name="project_all">全部</string>
    <string name="project_finished">已办事项</string>
    <string name="project_unfinished">待办事项</string>
    <string name="project_tv_state">业务类型:</string>
    <string name="eg_time">2018-12-30</string>
    <string name="seeDetail">查看详情</string>
    <string name="seeWorkFlow">查看流程</string>
    <string name="project_customer">客户:</string>
    <string name="eg_name">张三哥</string>
    <string name="project_tableWord">面签表</string>
    <string name="project_carPhotos">车辆照片</string>
    <string name="project_estPaper">评估报告</string>
    <string name="customer">业务经理：</string>
    <string name="eg_car">2016奔驰S750</string>
    <string name="project_state">代办</string>
    <string name="setting">设置</string>
    <string name="eg_department">风控部门</string>
    <string name="logout">退出登录</string>
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="phone">手机号码</string>
    <string name="eg_phone">13087516128</string>
    <string name="fixLoginPwd">修改登录密码</string>
    <string name="metting">面谈</string>
    <string name="mettingPhotos">1.上传面签表</string>
    <string name="metting_upload_hint">请保证照片完整且字迹清晰可辨，避免出现反光</string>
    <string name="metting_tv_upload_hint_A">正面</string>
    <string name="metting_tv_upload_hint_B">反面</string>
    <string name="beizhu">备注：</string>
    <string name="action_beizhu">请输入备注信息</string>
    <string name="metting_mortgage_type">2.质押 or 抵押</string>
    <string name="refuse">拒件</string>
    <string name="finished">已办</string>
    <string name="unfinished">待办</string>
    <string name="eg_title">车辆照片</string>
    <string name="checkinfo">信息核查</string>
    <string name="info_lawinfo">人法查询</string>
    <string name="info_credit">征信查询</string>
    <string name="info_check">审验状态</string>
    <string name="info_violation">违章查询</string>
    <string name="info_insurance">保险查询</string>
    <string name="info_legalperson">企业法人查询</string>
    <string name="evaluationreport">评估报告</string>
    <string name="evaluationcarage">车辆年份</string>
    <string name="evaluationcartype">车辆品牌</string>
    <string name="evaluationcarmodel">车型车款</string>
    <string name="evaluation_input_car_age">输入年份</string>
    <string name="evaluation_input_car_type">输入品牌</string>
    <string name="evaluation_input_car_model">输入型号</string>
    <string name="evaluationsubmitinfo">上传评估报告:</string>
    <string name="beizhu_words_left">0/100字</string>
    <string name="photossubmit">上传车辆照片:</string>
    <string name="attachphotos">附件图片:</string>
    <string name="evaluationquota">评估定额</string>
    <string name="violationdeposit">违章押金</string>
    <string name="insurancedeposit">保险押金</string>
    <string name="uploadagain">重新上传</string>
    <string name="feedbackresult">反馈结果</string>
    <string name="feedback">反馈</string>
    <string name="businessfeedback">业务反馈</string>
    <string name="feedbackstatement">反馈说明</string>
    <string name="action_feedbackstatement">请输入反馈说明</string>
    <string name="confirm">确定</string>
    <string name="noticesigning">通知签约</string>
    <string name="servicefee">服务费</string>
    <string name="extensionorbridgefee">展期费/过桥费</string>
    <string name="project_manager">客户经理</string>
    <string name="contractdate">合同日期</string>
    <string name="default_input">请输入</string>
    <string name="uploadCarPhoto">上传照片</string>
    <string name="uploadKeyPhoto">装GPS、钥匙</string>
    <string name="uploadCarPicture">收车</string>
    <string name="startsign">开始签约</string>
    <string name="sign">签约</string>
    <string name="uploadphoto">上传照片:</string>
    <string name="uploadvideos">上传视频:</string>
    <string name="enterorder">录入订单</string>
    <string name="netError">网络异常</string>
    <string name="loanrequest">放款申请</string>
    <string name="workflow">工作流程</string>
    <string name="firstchargeinform">首扣通知</string>
    <string name="uploadtransfervoucher">上传转账凭证</string>
    <string name="loanfinish">放款结束</string>
    <string name="customer_information">借款人资料</string>
    <string name="identification">身份证号:</string>
    <string name="phonenumber">手机号:</string>
    <string name="address">现住址:</string>
    <string name="bankcode">开户银行:</string>
    <string name="bankcard">银行账号:</string>
    <string name="loaninfo">借款信息</string>
    <string name="loanrate">借款利率:</string>
    <string name="loandest">借款用途:</string>
    <string name="loanduration">借款期限:</string>
    <string name="paybackway">还款方式:</string>
    <string name="carinfo">车辆信息:</string>
    <string name="carnumber">车辆牌照:</string>
    <string name="carregisternumber">汽车登记号:</string>
    <string name="carenginenumber">发动机号:</string>
    <string name="carframenumber">车架号:</string>
    <string name="releaseloaninfo">放款信息</string>
    <string name="releaseloan">尊敬的用户：首扣已收到，尾款已放款完成！请注意查收。</string>
    <string name="pls_input">请输入</string>
    <string name="informsign">通知签约</string>
    <string name="fileuploading">文件上传中</string>
    <string name="workdetail">查看详情</string>
    <string name="action_visitor_point_notice">请输入点位说明</string>
    <string name="reedit">驳回</string>
    <string name="workflowreedit">确定驳回</string>
    <string name="videoplay">视频播放</string>
    <string name="evaluation_input_market_value">请输入市场价</string>
    <string name="evaluation_input_real_value">请输入收车价</string>
    <string name="evaluationmarketvalue">市场价</string>
    <string name="evaluationrealvalue">收车价</string>
    <string name="market_value">市场价</string>
    <string name="take_value">收车价</string>
    <string name="otsinvest">实地考察</string>
    <string name="uploadFoldingTable">上传折数表</string>
    <string name="uploadOTSPhotos">上传实地照片</string>
    <string name="mortgagereg">抵押登记</string>
    <string name="riskmanager">风控审核</string>
    <string name="riskmanagerhint">风控审核通过</string>
    <string name="riskmanagerstate">风控审核结果</string>
    <string name="firstfeedbackresult">初步反馈结果</string>
    <string name="action_old_password">请输入旧密码</string>
    <string name="action_new_password">请输入新密码</string>
    <string name="action_new_password_again">请再次输入新密码</string>
    <string name="save">保存</string>
    <string name="searchlist">查询列表</string>
    <string name="quicksearch">快速查找:</string>
    <string name="inputname">请输入客户姓名/业务经理姓名</string>
    <string name="datesearch">日期查询:</string>
    <string name="enddatehint">结束日期</string>
    <string name="startdatehint">开始日期</string>
    <string name="bustype">业务类型</string>
    <string name="busstate">业务状态</string>
    <string name="reset">重置</string>
    <string name="search">搜索</string>
    <string name="picture_cancel">取消</string>
    <string name="wanyuan">万元</string>
    <string name="project_default">默认</string>
    <string name="project_status">业务状态</string>
    <string name="project_type">业务类型</string>
    <string name="project_time">时间</string>
    <string name="default_time">2018-05-01</string>
    <string name="waitsign">等待签约</string>
    <string name="waittosign">核实无误，请开始签约</string>
    <string name="version">版本号</string>
    <string name="reuse">恢复状态</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appraisal">估价</string>
    <string name="st_appraisal_car_model">车款</string>
    <string name="st_appraisal_car_type">品牌</string>
    <string name="st_appraisal_car_date">年份</string>
    <string name="st_appraisal_search">搜索</string>
    <string name="st_appraisal_car_type_hint">请输入品牌</string>
    <string name="st_appraisal_car_model_hint">请输入车款</string>
    <string name="st_appraisal_car_date_hint">请输入年份</string>
    <string name="st_appraisal_result">估价结果</string>
    <string name="workdetail_st_share">分享</string>
    <string name="st_appraisal_car_milage">里程数</string>
    <string name="evaluation_input_car_milage">请输入里程数</string>
    <string name="milage">公里</string>
    <string name="auto_update">局部刷新</string>
    <string name="project_tv_provider">车励享</string>
    <string name="bangke">车励享帮客</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="paybackmark">还款录入</string>
    <string name="st_name">姓名:</string>
    <string name="st_name_hint">请输入姓名</string>
    <string name="carType">车型:</string>
    <string name="st_car_type_hint">请选择车型</string>
    <string name="st_need_payback">应还款:</string>
    <string name="st_need_payback_hint">请输入应还款</string>
    <string name="st_has_payback">已还款:</string>
    <string name="st_has_payback_hint">请输入已还款</string>
    <string name="st_actual_payback">实际:</string>
    <string name="st_actual_payback_hint">请输入实际还款</string>
    <string name="st_payback_periods">期数:</string>
    <string name="st_payback_periods_hint">请输入期数</string>
    <string name="st_search">查找</string>
    <string name="st_actual_payback_date">日期：</string>
    <string name="st_actual_payback_date_hint">请选择实际还款日期</string>
    <string name="st_renewloan_completation">续贷结束</string>
    <string name="st_contract_detail">合同详情</string>
    <string name="look_loan_detail">贷款详情：</string>
    <string name="look">查看</string>
</resources>
