<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Appraisal.View.AppraisalCarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#74a9ed">

        <ImageView
            android:id="@+id/ig_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@null"
            android:src="@mipmap/visitor_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/appraisal"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/ig_appraisal_background"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvCarType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/st_appraisal_car_type"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etCarType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tvCarType"
                android:hint="@string/st_appraisal_car_type_hint"
                android:textColor="#000000"
                android:textSize="14sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvCarModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/st_appraisal_car_model"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etCarModel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tvCarModel"
                android:hint="@string/st_appraisal_car_model_hint"
                android:textColor="#000000"
                android:textSize="14sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvCarYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/st_appraisal_car_date"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etCarYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tvCarYear"
                android:hint="@string/st_appraisal_car_date_hint"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="#000000"
                android:textSize="14sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAppraisalSearch"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@mipmap/info_bg_next"
        android:text="@string/st_appraisal_search"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</LinearLayout>