<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="zjl.com.oa.Setting.View.ModifyPwdActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#74a9ed">

        <ImageView
            android:id="@+id/ig_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@null"
            android:src="@mipmap/visitor_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/fixLoginPwd"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/fixpwd"
        android:hint="@string/action_old_password"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/fixpwd"
        android:hint="@string/action_new_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_new_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/fixpwd"
        android:hint="@string/action_new_password_again"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/visitor_bg_next"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</LinearLayout>
