<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@mipmap/businessfeedback" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/feedbackstatement"
        android:textColor="#000000"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#e5e5e5" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/action_feedbackstatement"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:textColor="#b0b0b0"
        android:textColorHint="#b0b0b0"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5"
        android:paddingLeft="20dp"
        android:paddingTop="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/picture_cancel"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#74a9ed"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>